security/network-policies/allow-api-to-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-api-to-redis

spec:
  podSelector:
    matchLabels:
      app: redis

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: taskflow-api
      ports:
        - protocol: TCP
          port: 6379
