security/network-policies/allow-worker-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-worker-egress

spec:
  podSelector:
    matchLabels:
      app: taskflow-worker

  policyTypes:
    - Egress

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
        - protocol: TCP
          port: 5432
